--- a/brieffy-backend/requirements.txt
+++ b/brieffy-backend/requirements.txt
@@ -6,7 +6,8 @@ pyjwt
 pydantic
 pydantic[email]
 email-validator
-<<<<<<< HEAD
-=======
 pymongo
->>>>>>> 5e2751485f924dd5db2806d711f1ae416a44dc5b
+selenium
+beautifulsoup4
+lxml 
+html5lib
